     SBMLsimulator core NEWS -- History of user-visible changes
======================================================================
Version 1.2 (2012-xx-xx)
======================================================================

 * New features:
   
   - A new pom.xml file has been added to the project in order to
     support Maven for this library.
 
 * Bug fixes: 

======================================================================
Version 1.1 (2012-05-04)
======================================================================

 * New features:
 
   - Support for SED-ML (Simulation Experiment Description
     Markup Language, Waltemath et al., 2011) to facilitate the re-use
     and reproduction of simulation experiments by reading and 
     executing SED-ML files. See the new package org.simulator.sedml
     and the new test cases in the test folder.
   
   - There is now a convenient ant file build.xml that provides several
     options, such as inclusion of SED-ML support or the automatic
     creation of UML graphs.
     
   - The documentation in JavaDoc has been extensively improved.
 
 * Changes in this version:
 
   - Renamed org.simulator.math.odes.EventInProcess to 
     org.simulator.math.odes.EventInProgress
     
   - Renamed org.simulator.sbml.SBMLEventInProcessWithDelay to
     org.simulator.sbml.SBMLEventInProgressWithDelay
     
   - The separation between the interfaces for arbitrary differential
     equation systems and SBML-specific implementation has become
     very strict. The previous release contained some dependency in
     the event handling to SBML. This has now been resolved by
     introducing a modified type hierarchy of Event object handling.
     
   - The treatment of intermediate results during the evaluation of
     ASTNodes had to be changed due to changes in the JSBML library. 
 
 * Bug fixes:

   - There was a redundant representation of interpreters for SBML-